# traintimes

./: .gitignore  .travis.yml  AGENTS.md  README.md  README.rst  pyproject.toml  pytest.ini  sdk.py  setup.py  test_sdk.py  test_sdk_integration.py  tox.ini
.github/workflows/: ci.yml
random-scripts/: delays1.py  delays2.py  delays3.py  delays4.py
tests/: conftest.py  test_cli.py  test_models.py  test_sdk.py  test_sdk_integration.py  test_utils.py  utils.py
traintimes/: __init__.py  cli.py  models.py  sdk.py
