[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "traintimes"
version = "0.1.0.dev0"
description = "A Python SDK for realtimetrains' API"
readme = "README.rst"
authors = [
  { name = "Tom Viner", email = "traintimes@viner.tv" },
]
requires-python = ">=3.8"
dependencies = [
  "purl>=1.1,<2",
  "requests>=2.31,<3",
  "requests-cache>=1.2,<2",
]

[project.urls]
Homepage = "https://github.com/tomviner/traintimes"

[tool.uv]
dev-dependencies = [
  "pytest",
  "pytest-cov",
  "freezegun==0.3.5",
]
